FIX: social buttons vertical align. (9)

--- a/source/css/_common/components/post/post-meta.styl
+++ b/source/css/_common/components/post/post-meta.styl
@@ -44,6 +44,7 @@
   +mobile() { display: none; }
 }
 .social-like {
+  font-size: 14px;
   height: 20px;
   text-align: center;
   border-top: 1px solid #eee;
